--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/imagemy.jpg" alt="Profile Photo">
+                <img src="imagemy.jpg" alt="Profile Photo">
                 <div class="shape-blob"></div>
             </div>
         </div>
